--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,18 @@
+// {
+//     "compilerOptions": {
+//         "outDir"    : "dist",
+//     },
+//     "exclude": [
+//         "css",
+//     ]
+// }
+
+
 {
     "compilerOptions": {
-        "outDir"    : "dist",
-    },
-    "exclude": [
-        "css",
-    ]
+        // ...
+        "target": "es5",
+        "lib": ["esnext", "dom"]
+        // ...
+    }
 }
