--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,26 @@
-// {
-//     "compilerOptions": {
-//         "outDir"    : "dist",
-//     },
-//     "exclude": [
-//         "css",
-//     ]
-// }
-
-
 {
-    "compilerOptions": {
-        // ...
-        "target": "es5",
-        "lib": ["esnext", "dom"]
-        // ...
-    }
+  "compilerOptions": {
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx"
+  },
+  "include": [
+    "src"
+  ]
 }
